Miscelaneous docs fixes, tips notes and images

--- a/docs/02.administer/15.admin_guide/55.upgrade/11.buster_bullseye_migration.md
+++ b/docs/02.administer/15.admin_guide/55.upgrade/11.buster_bullseye_migration.md
@@ -69,7 +69,9 @@ Apps which won't be automatically repaired and need a force upgrade:
 - synapse
 - weblate
 
-!!! If needed, you can disable the automatic rebuild for a specific python app, by removing the dedicated file ending with `.requirements_backup_for_bullseye_upgrade.txt` before applying the migration. You can find this file near the venv (Python virtual environment) of your app inside `/opt` or `/var/www`.
+:::tip
+If needed, you can disable the automatic rebuild for a specific python app, by removing the dedicated file ending with `.requirements_backup_for_bullseye_upgrade.txt` before applying the migration. You can find this file near the venv (Python virtual environment) of your app inside `/opt` or `/var/www`.
+:::
 
 ### Check that no issue appeared in the diagnosis
 
@@ -102,7 +104,9 @@ We haven't yet found  solution for this issue.
 
 ### No ethernet connexion after rebooting following a migration on a Raspberry Pi 4
 
-! If you have not yet rebooted your server, don't do it (we are looking for a solution). This will avoid you the use of a keyboard and screen.
+:::warning
+If you have not yet rebooted your server, don't do it (we are looking for a solution). This will avoid you the use of a keyboard and screen.
+:::
 
 We found this in the Raspberry Pi documentation
 
