--- a/docs/02.administer/15.admin_guide/55.upgrade/12.bullseye_bookworm/05.issues_faq/05.issues_faq.md
+++ b/docs/02.administer/15.admin_guide/55.upgrade/12.bullseye_bookworm/05.issues_faq/05.issues_faq.md
@@ -48,7 +48,9 @@ We haven't yet found  solution for this issue.
 
 ### No ethernet connexion after rebooting following a migration on a Raspberry Pi 4
 
-! If you have not yet rebooted your server, don't do it (we are looking for a solution). This will avoid you the use of a keyboard and screen.
+:::warning
+f you have not yet rebooted your server, don't do it (we are looking for a solution). This will avoid you the use of a keyboard and screen.
+:::
 
 We found this in the Raspberry Pi documentation
 
