--- a/docs/02.administer/20.backups/index.mdx
+++ b/docs/02.administer/20.backups/index.mdx
@@ -148,7 +148,9 @@ From the command line, you can run `yunohost backup list` to get the available a
 
 You can then run `yunohost backup restore <archivename>` (hence without its `.tar` extension) to restore an archive. As for `yunohost backup create`, this will restore everything in the archive by default. If you want to restore only specific items, you can use something like `yunohost backup restore <archivename> --apps wordpress`, which will restore only the wordpress app.
 
-!!! In the case of a complete restoration, it is possible to restore instead of launching the initial configuration.
+:::tip
+In the case of a complete restoration, it is possible to restore instead of launching the initial configuration.
+:::
 
   </TabItem>
 </Tabs>
