--- a/docs/02.administer/45.tutorials/40.torhiddenservice.md
+++ b/docs/02.administer/45.tutorials/40.torhiddenservice.md
@@ -1,10 +1,6 @@
 ---
+sidebar_label: Configure Tor Hidden Service
 title: Using YunoHost as a Tor Hidden Service
-template: docs
-taxonomy:
-    category: docs
-routes:
-  default: '/torhiddenservice'
 ---
 
 :::warning
