--- a/docs/02.administer/45.tutorials/45.certificate_custom.md
+++ b/docs/02.administer/45.tutorials/45.certificate_custom.md
@@ -1,13 +1,10 @@
 ---
 title: Custom certificates
-template: docs
-taxonomy:
-    category: docs
-routes:
-  default: '/certificate_custom'
 ---
 
-! **Note:** since version 2.5, YunoHost integrates Let's Encrypt certificates automated management. You can easily and freely [install a Let's Encrypt certificate](/certificate). The following document describes the steps for installing a paid certificate from a certification authority (**Gandi**, **RapidSSL**, **StartSSL**, **Cacert**).
+:::warning
+Since version 2.5, YunoHost integrates Let's Encrypt certificates automated management. You can easily and freely [install a Let's Encrypt certificate](/certificate). The following document describes the steps for installing a paid certificate from a certification authority (**Gandi**, **RapidSSL**, **StartSSL**, **Cacert**).
+:::
 
 Some changes have taken place which impact the procedures indicated below:
 
@@ -17,7 +14,10 @@ Some changes have taken place which impact the procedures indicated below:
 ### Adding a signed certificate by an authority (other than Let's Encrypt)
 
 After the certificate creation with your registration authority, you must have a private key, the key file, and a public certificate, the crt file.
-! Note that the key file is very sensitive, it is strictly personal and must be very well secured.
+
+:::warning
+Note that the key file is very sensitive, it is strictly personal and must be very well secured.
+:::
 
 These two files should be copied to the server, if they are not already there.
 
