--- a/docs/02.administer/45.tutorials/55.moving_app_folder.md
+++ b/docs/02.administer/45.tutorials/55.moving_app_folder.md
@@ -1,10 +1,6 @@
 ---
+sidebar_label: Move apps storage
 title: Moving an app folder to a different storage
-template: docs
-taxonomy:
-    category: docs
-routes:
-  default: '/moving_app_folder'
 ---
 
 Applications folder are (*usually*) located in `/var/www/$appname`
