--- a/docs/02.administer/45.tutorials/60.security.md
+++ b/docs/02.administer/45.tutorials/60.security.md
@@ -1,10 +1,5 @@
 ---
 title: Security
-template: docs
-taxonomy:
-    category: docs
-routes:
-  default: '/security'
 ---
 
 YunoHost has been developed to provide the best security without too much complication. Every protocol used in YunoHost is **encrypted**, only a password's hashes are stored and by default each user is able to access their personal directory only.
@@ -15,9 +10,13 @@ Two things remain important to note:
 
 - The fact that YunoHost is a well-known and used piece of software increases the chances of an attack. If a flaw is discovered, it could potentially affect all YunoHost instances at once. Keep your system **up-to-date** to remain safe. Updates can be automated by installing the ["Unattended_upgrades" app](https://install-app.yunohost.org/?app=unattended_upgrades).
 
-!!!! If you need advice, do not hesitate to [ask us](/help).
+:::tip
+If you need advice, do not hesitate to [ask us](/help).
+:::
 
-!! [fa=shield /] To discuss security flaws, contact the [YunoHost security team](/security_team).
+:::danger
+<FAIcon icon="fa-shield"/> To discuss security flaws, contact the [YunoHost security team](/security_team).
+:::
 
 ---
 
@@ -25,9 +24,13 @@ Two things remain important to note:
 
 If your YunoHost server is used in a critical production environment, or if you want to improve its safety, you may want to follow these good practices.
 
-! **WARNING:** Following these instructions requires advanced knowledge of system administration.
+:::warning
+Following these instructions requires advanced knowledge of system administration.
+:::
 
-!!!! **TIP** Never close your current SSH connection before checking that your alterations work. Test your new configuration by opening a new terminal or window. That way, you can undo your alterations if anything goes wrong.
+:::tip
+Never close your current SSH connection before checking that your alterations work. Test your new configuration by opening a new terminal or window. That way, you can undo your alterations if anything goes wrong.
+:::
 
 ### SSH authentication via key
 
@@ -40,9 +43,10 @@ ssh-keygen
 ssh-copy-id -i ~/.ssh/id_rsa.pub <username@your_yunohost_server>
 ```
 
-!!! If you run into permissions issues, set `username` as owner of the dir `~/.ssh` with `chown`. Be careful, for security reasons this directory should be in mode `700`.
-
-!!! If you are on Ubuntu 16.04 you should run `ssh-add` to initialize the SSH agent.
+:::tip
+If you run into permissions issues, set `username` as owner of the dir `~/.ssh` with `chown`. Be careful, for security reasons this directory should be in mode `700`.  
+If you are on Ubuntu 16.04 you should run `ssh-add` to initialize the SSH agent.
+:::
 
 Type your admnistration password and your key will be copied onto your server.
 
@@ -60,7 +64,9 @@ To prevent SSH connection attempts by robots that scan the internet for any serv
 This is handled by a system setting, which takes care of updating the SSH and Fail2Ban configuration.  
 There's no need to change this port if you've disabled password authentication.
 
-! If you modify anything in the `/etc/ssh/sshd_config` file, even if only the port, YunoHost will no longer manage this file. For this reason, always use the YunoHost admin tools to make changes to the systems configuration files!
+:::warning
+If you modify anything in the `/etc/ssh/sshd_config` file, even if only the port, YunoHost will no longer manage this file. For this reason, always use the YunoHost admin tools to make changes to the systems configuration files!
+:::
 
 ```bash
 sudo yunohost settings set security.ssh.ssh_port -v <new_ssh_port_number>
@@ -100,8 +106,10 @@ YunoHost administration is accessible through an **HTTP API**, served on the 678
 It can be used to administer a lot of things on your server, so malicious actors can also use it to damage your server.
 The best thing to do, if you know how to use the [command-line interface (CLI)](/commandline), is to deactivate the `yunohost-api` service.
 
-! This will completely disable both YunoHost's API and the web administration panel that relies on it.
-! Proceed only if you are comfortable with the command line interface.
+:::warning
+This will completely disable both YunoHost's API and the web administration panel that relies on it.
+Proceed only if you are comfortable with the command line interface.
+:::
 
 ```bash
 sudo systemctl disable yunohost-api
