--- a/docs/02.administer/45.tutorials/65.sftp_on_apps.md
+++ b/docs/02.administer/45.tutorials/65.sftp_on_apps.md
@@ -1,10 +1,6 @@
 ---
+sidebar_label: Access apps via SFTP
 title: Give SFTP permission to edit an app
-template: docs
-taxonomy:
-    category: docs
-routes:
-  default: '/sftp_on_apps'
 ---
 
 In YunoHost permission management web admin interface, you can specify which user can access your system through SFTP.
