--- a/docs/02.administer/50.troubleshooting/15.noaccess.md
+++ b/docs/02.administer/50.troubleshooting/15.noaccess.md
@@ -17,7 +17,9 @@ Check that you are getting access to the server by using its public IP (you can 
 
 ### Configure DNS records
 
-! This is not a problem if you are using a domain from `nohost.me`, `noho.st` or `ynh.fr`)
+:::tip
+This is not a problem if you are using a domain from `nohost.me`, `noho.st` or `ynh.fr`)
+:::
 
 You have to configure your [DNS records](/dns_config) (at least `A` records, and `AAAA` if you have an IPv6 connection).
 
@@ -53,7 +55,9 @@ If you have been banned from both SSH and webadmin, you can try to reach your se
 
 See also : [unban an IP on Fail2Ban](/fail2ban)
 
-!!!! Ban are usually 10 to 12-minute-long, and on IPv4 only.
+:::note
+Ban are usually 10 to 12-minute-long, and on IPv4 only.
+:::
 
 ### NGINX web server is broken
 
@@ -95,7 +99,9 @@ Once logged in, you have to check the state of the service with `yunohost servic
 
 If this is still failing, on a VPS you may be able to reboot in rescue mode. Do not hesitate to ask for [help](/help)
 
-!!! To be completed.
+:::warning
+To be completed
+:::
 
 ## Your VPN expired or does not connect any more
 
@@ -108,7 +114,9 @@ Meanwhile, try reaching your server if it is at home, by:
 - its local IP, retrievable from your router configuration panel or `sudo arp-scan --local`
 - reaching it at `yunohost.local`, or `yunohost-2.local`, etc. depending on how many YunoHost servers are on your network.
 
-!!! To be completed.
+:::warning
+To be completed
+:::
 
 ## Your server does not boot
 
