--- a/docs/02.administer/50.troubleshooting/20.ipv6.md
+++ b/docs/02.administer/50.troubleshooting/20.ipv6.md
@@ -24,7 +24,9 @@ On the OVH panel, you will copy 3 elements:
 On your VPS, create a backup of the network configuration with : `cp /etc/network/interfaces ~/interfaces` in home directory.
 Then, you can edit the configuration file (`/etc/network/interfaces`) with the following.
 
-! In this example, it is assumed that your network interface is `eth0`. If it's different (check with `ip a`) you need to adapt the example below.
+:::note
+In this example, it is assumed that your network interface is `eth0`. If it's different (check with `ip a`) you need to adapt the example below.
+:::
 
 ```text
 iface eth0 inet6 static
