--- a/docs/05.community/25.yunohost_project_organization.mdx
+++ b/docs/05.community/25.yunohost_project_organization.mdx
@@ -1,11 +1,5 @@
 ---
 title: Project organisation
-template: docs
-redirect: 'https://github.com/YunoHost/project-organization/'
-routes:
-  default: '/yunohost_project_organization'
-  aliases:
-    - '/project_organization'
 ---
 
-{/* TODO: */}
+{/* TODO: redirect: 'https://github.com/YunoHost/project-organization/' */}
