--- a/docs/05.community/45.chatons.mdx
+++ b/docs/05.community/45.chatons.mdx
@@ -1,7 +1,8 @@
 ---
 title: Creating a CHATONS with YunoHost
-template: docs
-redirect: 'https://wiki.chatons.org/doku.php/heberger/administration_systeme/yunohost'
 ---
 
-{/* TODO: */}
+{/* 
+TODO: 
+redirect: 'https://wiki.chatons.org/doku.php/heberger/administration_systeme/yunohost' 
+*/}
