--- a/docs/02.administer/45.tutorials/10.theming.md
+++ b/docs/02.administer/45.tutorials/10.theming.md
@@ -1,4 +1,5 @@
 ---
+sidebar_label: Theme the portal
 title: Customize the appearance of the user portal
 ---
 
@@ -29,13 +30,17 @@ Then you can use `nano /etc/ssowat/conf.json.persistent` to enable the theme you
 }
 ```
 
-!!! You might need to force the refresh of your browser's cache for the theme to fully propagate. You can do so with Ctrl+Shift+R on Firefox.
+:::tip
+You might need to force the refresh of your browser's cache for the theme to fully propagate. You can do so with Ctrl+Shift+R on Firefox.
+:::
 
 ## Adding someone else's theme
 
 You may add themes created by other people by downloading and extracting the corresponding files in a new folder `the_theme_name` in `/usr/share/ssowat/portal/assets/themes/`.
 
-! **Beware** that adding third-party themes from random strangers on the internet **is a security risk**. It is equivalent to running someone's else code on your machine, which can be used for malicious purpose such as stealing credentials!
+:::warning
+Beware that adding third-party themes from random strangers on the internet **is a security risk**. It is equivalent to running someone's else code on your machine, which can be used for malicious purpose such as stealing credentials!
+:::
 
 There are a handful of themes listed [on GitHub](https://github.com/yunohost-themes).
 
@@ -55,7 +60,9 @@ Then, edit the files the CSS and JS files in `/usr/share/ssowat/portal/assets/th
 
 You can also add your own images and assets which can then be used by the CSS and JS files.
 
-!!! [Share your custom theme with the community!](https://github.com/yunohost-themes)
+:::tip
+[Share your custom theme with the community!](https://github.com/yunohost-themes)
+:::
 
 ### Example : customizing the logo
 
