Start the install category

--- a/docs/06.contribute/15.dev/index.mdx
+++ b/docs/06.contribute/15.dev/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Contributing to the YunoHost core
+title: Contributing to the core
 ---
 
 You wish to add a new feature in the YunoHost core, but don't know how to
