fix broken links

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -7,11 +7,11 @@ sidebar_position: 0
 
 This is the documentation for [YunoHost, a libre operating system aiming to simplify server administration and democratize self-hosting](/overview/what_is_yunohost).
 
-As a soon-to-be administrator of your own server, go to the [Admin guide](/admindoc) to learn more about self-hosting, how to install your YunoHost server and install your first apps.
+As a soon-to-be administrator of your own server, go to the [Admin guide](/category/administration-guide) to learn more about self-hosting, how to install your YunoHost server and install your first apps.
 
 You can check out the [application catalog](https://apps.yunohost.org) to browse apps that can be installed on a server (though you can also explore it directly from your admin interface).
 
-The [Community](/community) is here for you if you need some help : come [chat](/chat_rooms) with us or reach out on the [forum](/community/forum)!
+The [Community](/category/community) is here for you if you need some help : come [chat](/community/chat_rooms) with us or reach out on the [forum](/community/forum)!
 
 {/*
 TODO:
