Resources: reduce the heading level of the TOC

--- a/docs/06.contribute/10.packaging_apps/10.manifest/10.app_resources.mdx
+++ b/docs/06.contribute/10.packaging_apps/10.manifest/10.app_resources.mdx
@@ -1,5 +1,6 @@
 ---
 title: App resources
+toc_max_heading_level: 2
 # custom_edit_link: 'https://github.com/YunoHost/yunohost/blob/dev/src/utils/resources.py'
 ---
 
